--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -210,4 +210,9 @@
   .TableLayout :is(button) {
     height: 35px;
   }
+
+  .ChipButton {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
