--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -53,7 +53,7 @@
   border: 1px solid #444;
 }
 
-.PlayerName {
+.PlayerFrame :not(.Main) .PlayerName {
   display: flex;
   gap: 5px;
 }
@@ -118,6 +118,10 @@
 .PlayerHand {
   display: flex;
   gap: var(--gap);
+}
+
+.CardBody.hide-card-details > div {
+  font-size: 0; /* Rank and Suit will inherit this, making them invisible */
 }
 
 .CardBody {
