--- a/src/css/OnlineDisplay.css
+++ b/src/css/OnlineDisplay.css
@@ -3,7 +3,6 @@
   height: 100%;
   width: 100%;
   margin: auto;
-  padding: 20px;
 }
 
 .list-title {
@@ -65,7 +64,8 @@
   gap: 10px;
   flex: 2;
   border-radius: var(--border-radius);
-  background: var(--dh-bg1);
+  background: var(--ui-bg1);
+  padding: var(--gap);
 }
 
 .SwapCard {
