--- a/src/css/app.css
+++ b/src/css/app.css
@@ -5,45 +5,56 @@
   --ui-bg4: #3a3e4a;
   --ui-font: #e2e2e2;
   --focus: #4abdff;
+  --status0: #d50000;
+  --status1: #0065c9;
+  --status2: #56d524;
   --border-radius: 10px;
   --border-color: #444;
   --gap: 20px;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+
 #AppClient {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
-  font-family: monospace;
-}
-
-#AppClient > section {
   display: grid;
-  grid-template-columns: 15% auto;
-  height: 100%;
+  grid-template-columns: 15vw auto 50px;
+  grid-template-rows: min-content;
+  grid-template-areas:
+    "A A A"
+    "B C D";
+  width: 100vw;
+  min-height: 100vh;
+  max-height: 100vh;
+  font-family: monospace;
   overflow: hidden;
+  background: var(--ui-bg1);
 }
 
-#AppClient > section > main {
+header {
+  grid-area: A;
+  height: fit-content;
+}
+
+aside {
+  grid-area: B;
   display: flex;
   flex-direction: column;
-  height: 100%;
-  overflow: hidden;
-  background: var(--ui-bg2);
-  padding: 15px;
+  justify-content: center;
+  padding: var(--gap);
 }
 
-.display-content {
-  background: var(--ui-bg1);
-  height: calc(100% - 50px);
-  padding: 20px;
-}
-.display-content > div {
-  position: relative;
+main {
+  grid-area: C;
+  height: 100vh;
+  max-height: 100vh;
   overflow-y: scroll;
-  overflow-x: hidden;
-  height: 100%;
+  background: var(--ui-bg3);
+  padding: var(--gap);
 }
 
 .search-box {
@@ -98,16 +109,6 @@ footer {
   z-index: 1;
   color: #fff;
   border-top: 1px solid #444;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-}
-
-section {
-  position: relative;
 }
 
 article {
@@ -258,28 +259,49 @@ textarea {
   overflow: hidden;
 }
 
-@media screen and (min-width: 481px) and (max-width: 1200px) {
-  #AppClient {
-    display: none !important;
-  }
+table.TableViews {
+  width: 100%;
+  border-collapse: collapse;
+  color: #fff;
+  table-layout: fixed;
+  background: var(--ui-bg1);
 }
 
-@media screen and (max-width: 480px) {
-  #NavAside {
-    display: none !important;
+.TableViews th,
+.TableViews td {
+  border: 1px solid #444;
+  padding: 10px;
+  text-align: left;
+  height: auto;
+}
+
+.TableViews thead {
+  background: var(--ui-bg1);
+  color: #fff;
+}
+
+.TableViews td.editing {
+  box-shadow: inset 0 0px 2px 1px #4abdff;
+}
+
+.search-box {
+  min-width: 250px;
+  width: fit-content;
+}
+
+@media (max-width: 1200px) {
+  #AppClient {
+    --gap: 10px;
+    display: flex;
+    flex-direction: column;
   }
 
-  #AppClient > section {
-    display: flex !important;
-  }
-
-  main {
-    width: 100%;
-    padding: 0 !important;
-  }
-
-  .display-content {
-    height: 100%;
-    padding: 10px;
+  aside {
+    position: absolute;
+    justify-content: start;
+    width: 100vw;
+    height: 100vh;
+    background: var(--ui-bg2);
+    transform: translateX(-100%);
   }
 }
