--- a/src/css/app.css
+++ b/src/css/app.css
@@ -296,6 +296,10 @@ table.TableViews {
     flex-direction: column;
   }
 
+  header {
+    display: none !important;
+  }
+
   aside {
     position: absolute;
     justify-content: start;
