--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -35,6 +35,8 @@
   display: grid;
   grid-template-columns: repeat(6, 1fr);
   border: 1px solid #444;
+  height: 15%;
+  min-height: 135px;
 }
 
 .PlayerFrame {
@@ -93,16 +95,21 @@
 .TableFlob {
   display: flex;
   flex-direction: column;
+  place-content: center;
+  place-items: center;
   border: 1px solid #444;
   padding: var(--gap);
-  place-items: center;
   gap: 5px;
+  height: 10%;
+  min-height: 40px;
 }
 
 .TimelineLog {
   border: 1px solid #444;
   padding: var(--gap);
   overflow-y: scroll;
+  height: -webkit-fill-available;
+  max-height: 40vh;
 }
 
 .TimelineRound {
@@ -162,13 +169,12 @@
 }
 
 @media screen and (max-width: 480px) {
-  .PlayerLineup {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-  }
-
   .CurrentPhase {
     display: none;
+  }
+
+  .CardBody {
+    width: 20px;
   }
 
   .PlayerFrame,
