--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -117,7 +117,9 @@
   height: auto;
   aspect-ratio: 2.8/4;
   border: 1px solid var(--border-color);
+  /*
   background: #fff;
+  */
   border-radius: 3px;
   line-height: 1;
 }
@@ -133,6 +135,7 @@
   border: 1px solid var(--border-color) !important;
 }
 
+/*
 .CardBody.spades {
   border: 1px solid var(--spades);
   color: var(--spades);
@@ -152,6 +155,7 @@
   border: 1px solid var(--clubs);
   color: var(--clubs);
 }
+*/
 
 .ActionButton {
   display: flex;
